--- a/src/pages/instruments/01_cpis_ru.html
+++ b/src/pages/instruments/01_cpis_ru.html
@@ -225,7 +225,7 @@
                     <div>
                         <select id="lk14b" name="lk14b"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -235,7 +235,7 @@
                     <div>
                         <select id="lk14c" name="lk14c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -244,7 +244,7 @@
                     <div>
                         <select id="lk14d" name="lk14d"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
 
                     </div>
@@ -461,7 +461,7 @@
                     <div>
                         <select id="cm3b" name="cm3b"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -471,7 +471,7 @@
                     <div>
                         <select id="cm3c" name="cm3c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -480,7 +480,7 @@
                     <div>
                         <select id="cm3d" name="cm3d"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
 
                     </div>
@@ -1022,7 +1022,7 @@
                     <div>
                         <select id="cm10c" name="cm10c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -1032,7 +1032,7 @@
                     <div>
                         <select id="cm10d" name="cm10d"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -1041,7 +1041,7 @@
                     <div>
                         <select id="cm10e" name="cm10e"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
 
                     </div>
@@ -1083,7 +1083,7 @@
                     <div>
                         <select id="cm11c" name="cm11c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -1093,7 +1093,7 @@
                     <div>
                         <select id="cm11d" name="cm11d"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -1103,7 +1103,7 @@
                     <div>
                         <select id="cm11e" name="cm11e"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
 
                     </div>
@@ -1298,7 +1298,7 @@
                     <div>
                         <select id="ct3b" name="ct3b"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -1308,7 +1308,7 @@
                     <div>
                         <select id="ct3c" name="ct3c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -1317,7 +1317,7 @@
                     <div>
                         <select id="ct3d" name="ct3d"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
 
                     </div>
@@ -1856,7 +1856,7 @@
                     <div>
                         <select id="ct10c" name="ct10c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -1866,7 +1866,7 @@
                     <div>
                         <select id="ct10d" name="ct10d"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -1875,7 +1875,7 @@
                     <div>
                         <select id="ct10e" name="ct10e"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
 
                     </div>
@@ -1917,7 +1917,7 @@
                     <div>
                         <select id="ct11c" name="ct11c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -1927,7 +1927,7 @@
                     <div>
                         <select id="ct11d" name="ct11d"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -1937,7 +1937,7 @@
                     <div>
                         <select id="ct11e" name="ct11e"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
 
                     </div>
@@ -2613,7 +2613,7 @@
                     <div>
                         <select id="cg10c" name="cg10c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -2623,7 +2623,7 @@
                     <div>
                         <select id="cg10d" name="cg10d"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -2632,7 +2632,7 @@
                     <div>
                         <select id="cg10e" name="cg10e"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
 
                     </div>
@@ -2673,7 +2673,7 @@
                     <div>
                         <select id="cg11c" name="cg11c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -2683,7 +2683,7 @@
                     <div>
                         <select id="cg11d" name="cg11d"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -2693,7 +2693,7 @@
                     <div>
                         <select id="cg11e" name="cg11e"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
 
                     </div>
@@ -2786,7 +2786,7 @@
                     <div>
                         <select id="sa3a" name="sa3a"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -2796,7 +2796,7 @@
                     <div>
                         <select id="sa3b" name="sa3b"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -2806,7 +2806,7 @@
                     <div>
                         <select id="sa3c" name="sa3c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
