--- a/src/pages/instruments/01_cpis_uz.html
+++ b/src/pages/instruments/01_cpis_uz.html
@@ -228,7 +228,7 @@
                     <div>
                         <select id="lk14b" name="lk14b"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                     <div>
                         <select id="lk14c" name="lk14c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -247,7 +247,7 @@
                     <div>
                         <select id="lk14d" name="lk14d"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
 
                     </div>
@@ -466,7 +466,7 @@
                     <div>
                         <select id="cm3b" name="cm3b"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -476,7 +476,7 @@
                     <div>
                         <select id="cm3c" name="cm3c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -485,7 +485,7 @@
                     <div>
                         <select id="cm3d" name="cm3d"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
 
                     </div>
@@ -1027,7 +1027,7 @@
                     <div>
                         <select id="cm10c" name="cm10c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -1037,7 +1037,7 @@
                     <div>
                         <select id="cm10d" name="cm10d"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -1046,7 +1046,7 @@
                     <div>
                         <select id="cm10e" name="cm10e"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
 
                     </div>
@@ -1088,7 +1088,7 @@
                     <div>
                         <select id="cm11c" name="cm11c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -1098,7 +1098,7 @@
                     <div>
                         <select id="cm11d" name="cm11d"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -1108,7 +1108,7 @@
                     <div>
                         <select id="cm11e" name="cm11e"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
 
                     </div>
@@ -1306,7 +1306,7 @@
                     <div>
                         <select id="ct3b" name="ct3b"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -1316,7 +1316,7 @@
                     <div>
                         <select id="ct3c" name="ct3c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -1325,7 +1325,7 @@
                     <div>
                         <select id="ct3d" name="ct3d"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
 
                     </div>
@@ -1864,7 +1864,7 @@
                     <div>
                         <select id="ct10c" name="ct10c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -1874,7 +1874,7 @@
                     <div>
                         <select id="ct10d" name="ct10d"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -1883,7 +1883,7 @@
                     <div>
                         <select id="ct10e" name="ct10e"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
 
                     </div>
@@ -1925,7 +1925,7 @@
                     <div>
                         <select id="ct11c" name="ct11c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -1935,7 +1935,7 @@
                     <div>
                         <select id="ct11d" name="ct11d"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -1945,7 +1945,7 @@
                     <div>
                         <select id="ct11e" name="ct11e"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
 
                     </div>
@@ -2621,7 +2621,7 @@
                     <div>
                         <select id="cg10c" name="cg10c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -2631,7 +2631,7 @@
                     <div>
                         <select id="cg10d" name="cg10d"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -2640,7 +2640,7 @@
                     <div>
                         <select id="cg10e" name="cg10e"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
 
                     </div>
@@ -2681,7 +2681,7 @@
                     <div>
                         <select id="cg11c" name="cg11c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -2691,7 +2691,7 @@
                     <div>
                         <select id="cg11d" name="cg11d"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -2701,7 +2701,7 @@
                     <div>
                         <select id="cg11e" name="cg11e"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
 
                     </div>
@@ -2794,7 +2794,7 @@
                     <div>
                         <select id="sa3a" name="sa3a"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -2804,7 +2804,7 @@
                     <div>
                         <select id="sa3b" name="sa3b"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -2814,7 +2814,7 @@
                     <div>
                         <select id="sa3c" name="sa3c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
