--- a/src/pages/instruments/05_yplcs_en.html
+++ b/src/pages/instruments/05_yplcs_en.html
@@ -209,7 +209,7 @@
                     <div>
                         <select id="" name="pi4b"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -219,7 +219,7 @@
                     <div>
                         <select id="pi4c" name="pi4c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -228,7 +228,7 @@
                     <div>
                         <select id="pi4d" name="pi4d"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
 
                     </div>
@@ -266,7 +266,7 @@
                     <div class="flex gap-4">
                         <select id="pi6" name="pi6"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -348,7 +348,7 @@
                     <div>
                         <select id="" name="pi9c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -358,7 +358,7 @@
                     <div>
                         <select id="pi9d" name="pi9d"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -367,7 +367,7 @@
                     <div>
                         <select id="pi4h" name="pi9h"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
 
                     </div>
