--- a/src/pages/instruments/08_pfq_en.html
+++ b/src/pages/instruments/08_pfq_en.html
@@ -119,7 +119,7 @@
                     <div>
                         <select id="pf1a" name="pf1a"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                     <div>
                         <select id="pf1b" name="pf1b"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                     <div>
                         <select id="pf1c" name="pf1c"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
