--- a/src/pages/instruments/09_eef_en.html
+++ b/src/pages/instruments/09_eef_en.html
@@ -50,7 +50,7 @@
                     <div>I1. Name of the institution</div>
                     <div>
                         <select id="i2" name="i2" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="1">-- choose ---</option>
+                            <option value="-9" class="t_choose">--- choose ---</option>
                         </select>
                     </div>
                 </div>
