--- a/src/pages/localCoordinator/01_dashboard.html
+++ b/src/pages/localCoordinator/01_dashboard.html
@@ -151,7 +151,28 @@
                         <span class="t_view"></span>
                     </button>
                 </div>
+                <div class="bg-tableRow text-gray-600 px-3 py-1.5 font-medium col-span-2 flex items-center">
+                    <span class="t_child_placed_in_specialized_boarding_schools"></span>
+                </div>
+                <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium  flex items-center justify-center">
+                    <span id="t2c41"></span>
+                </div>
+                <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium  flex items-center justify-center">
+                    <span id="t2c42"></span>
+                </div>
+                <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium  flex items-center justify-center">
+                    <span id="t2c43"></span>
+                </div>
+                <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium  flex items-center justify-center">
+                    <span id="t2c44"></span>
+                </div>
+                <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
+                    <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader" id="viewEdit_CIBS">
+                        <span class="t_view"></span>
+                    </button>
+                </div>
             </div>
+
 
             <div class="flex gap-10 mt-10 px-4">
                 <button class="bg-gray-200 hover:bg-gray-300 px-4 py-6 rounded w-60 flex items-center justify-center gap-4">
