--- a/src/pages/instruments/05_yplcs_en.html
+++ b/src/pages/instruments/05_yplcs_en.html
@@ -964,7 +964,7 @@
 
                 <div class="grid grid-cols-2 gap-4 items-center mt-10">
                     <div>
-                        EE11. What were the sources of income for the young person in the past month (REFERENCE MONTH TO BE DECIDED)? <small class="block italic mt-1">MULTIPLE ANSWERS
+                        EE11. What were the sources of income for the young person in the past month (REFERENCE MONTH APRIL 2024)? <small class="block italic mt-1">MULTIPLE ANSWERS
                             POSSIBLE</small>
                     </div>
                     <div class="col-span-1 flex flex-col gap-2">
