--- a/src/pages/instruments/05_yplcs_ru.html
+++ b/src/pages/instruments/05_yplcs_ru.html
@@ -287,6 +287,38 @@
                     </div>
                 </div>
 
+                <p class="mt-6"><b>The last institution where the young person lived before leaving the child care system, according to the corresponding Register</b></p>
+
+                <div class="grid grid-cols-2 items-center gap-4 mt-6">
+                    <div>PI6r. Region</div>
+                    <div>
+                        <select id="pi6r" name="pi6r"
+                                class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                            <option value="-9" class="t_choose">--- choose ---</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="grid grid-cols-2 items-center gap-4 mt-6">
+                    <div>PI6d. District</div>
+                    <div>
+                        <select id="pi6d" name="pi6d"
+                                class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                            <option value="-9" class="t_choose">--- choose ---</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="grid grid-cols-2 items-center gap-4 mt-6">
+                    <div>PI6s. Settlement</div>
+                    <div>
+                        <select id="pi6s" name="pi6s"
+                                class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                            <option value="-9" class="t_choose">--- choose ---</option>
+                        </select>
+
+                    </div>
+                </div>
+
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
                     <div>PI6. Уникальный код учреждения, где находился молодой человек до выхода из системы опеки, согласно соответствующему Реестру.</div>
                     <div class="flex gap-4">
