--- a/src/pages/instruments/05_yplcs_en.html
+++ b/src/pages/instruments/05_yplcs_en.html
@@ -287,8 +287,29 @@
                     </div>
                 </div>
 
+                <p class="mt-6"><b>The last institution where the young person lived before leaving the child care system, according to the corresponding Register</b></p>
+
+                <div class="grid grid-cols-2 items-center gap-4 mt-6">
+                    <div>PI6r. Region</div>
+                    <div>
+                        <select id="pi6r" name="pi6r"
+                                class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                            <option value="-9" class="t_choose">--- choose ---</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="grid grid-cols-2 items-center gap-4 mt-6">
+                    <div>PI6d. District</div>
+                    <div>
+                        <select id="pi6d" name="pi6d"
+                                class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                            <option value="-9" class="t_choose">--- choose ---</option>
+                        </select>
+                    </div>
+                </div>
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                    <div>PI6. The unique code of the last service where the person lived before leaving the childcare system, according to the corresponding Register</div>
+                    <div>PI6. Institution</div>
                     <div class="flex gap-4">
                         <select id="pi6" name="pi6"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -296,27 +317,31 @@
                         </select>
                     </div>
                 </div>
+
+
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                    <div>PI6a. Service name</div>
+                    <div>PI6a. Service code</div>
                     <div>
                         <input type="text" id="pi6a" name="pi6a"
                                class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
                     </div>
                 </div>
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                    <div>PI6b. Service location</div>
+                    <div>PI6b. Service name</div>
                     <div>
                         <input type="text" id="pi6b" name="pi6b"
                                class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
                     </div>
                 </div>
 
+
+
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                    <div>PI6C. Type of institution</div>
+                    <div>PI6c. Type of institution</div>
                     <div>
                         <select id="pi6c" name="pi6c"
                                 class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
-                            <option selected>------</option>
+                            <option selected value="-9" class="t_choose">------</option>
                             <optgroup label="Childcare institutions:">
                                 <option value="11">11. Mehribonlik house</option>
                                 <option value="12">12. Muruvat house for children with disabilities</option>
