--- a/src/pages/instruments/05_yplcs_en.html
+++ b/src/pages/instruments/05_yplcs_en.html
@@ -346,7 +346,7 @@
                                 <option value="11">11. Mehribonlik house</option>
                                 <option value="12">12. Muruvat house for children with disabilities</option>
                                 <option value="13">13. Family-type home</option>
-                                <option value="14">14. SOS Children&#39;s Village</option>
+                                <option value="14">14. SOS Children's Village</option>
                             </optgroup>
                             <optgroup label="Boarding schools:">
                                 <option value="21">21. Type I-II for deaf or with hearing impairments children</option>
