--- a/src/pages/localCoordinator/01_dashboard.html
+++ b/src/pages/localCoordinator/01_dashboard.html
@@ -171,6 +171,26 @@
                         <span class="t_view"></span>
                     </button>
                 </div>
+                <div class="bg-tableRow text-gray-600 px-3 py-1.5 font-medium col-span-2 flex items-center">
+                    <span class="t_trace_questionnaire_about_the_young_person_who_left_the_alternative_care_system"></span>
+                </div>
+                <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium  flex items-center justify-center">
+                    <span id="t2c51"></span>
+                </div>
+                <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium  flex items-center justify-center">
+                    <span id="t2c52"></span>
+                </div>
+                <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium  flex items-center justify-center">
+                    <span id="t2c53"></span>
+                </div>
+                <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium  flex items-center justify-center">
+                    <span id="t2c54"></span>
+                </div>
+                <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
+                    <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader" id="viewEdit_TQYP">
+                        <span class="t_view"></span>
+                    </button>
+                </div>
             </div>
 
 
