--- a/src/pages/localCoordinator/02_institution_details.html
+++ b/src/pages/localCoordinator/02_institution_details.html
@@ -73,7 +73,7 @@
                     </label>
                     <select id="institution_type"
                             class="disabled:bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 ">
-                        <option value="-9" class="t_institution_type_option_0"></option>
+                        <option value="-9" class="t_choose">--- choose ---</option>
                         <optgroup label="" class="t_institution_type_group_1">
                             <option value="" class="t_institution_type_option_1"></option>
                             <option value="" class="t_institution_type_option_2"></option>
