show hide add button based on permissions

--- a/src/pages/instruments/01_cpis.html
+++ b/src/pages/instruments/01_cpis.html
@@ -17,12 +17,12 @@
         </div>
         <div class="relative w-full mt-10 pb-10 h-[calc(100vh-5.5rem)] overflow-y-auto">
 
-            <div class="flex justify-between mt-10 px-5">
+            <div class="flex justify-between mt-8 px-5">
                 <h1 class="text-xl">
-                    <span class="t_cpis_list"></span>
+                    <span class="t_children_placed_in_the_service">locading...</span>
                 </h1>
                 <div>
-                    <button class="bg-menuButton text-white px-3 py-1 rounded flex gap-3 items-center" id="add_child">
+                    <button class="bg-menuButton text-white px-3 py-1 rounded hidden gap-3 items-center" id="add_child_cpis">
                         <svg class="fill-white w-4 h-4" xmlns="http://www.w3.org/2000/svg"
                              viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                             <path
