--- a/src/pages/instruments/05_yplcs.html
+++ b/src/pages/instruments/05_yplcs.html
@@ -19,10 +19,10 @@
 
             <div class="flex justify-between mt-10 px-5">
                 <h1 class="text-xl">
-                    <span class="t_yplcs_list"></span>
+                    <span class="t_yplcs_list">loading...</span>
                 </h1>
                 <div>
-                    <button class="bg-menuButton text-white px-3 py-1 rounded flex gap-3 items-center" id="add_young_people">
+                    <button class="bg-menuButton text-white px-3 py-1 rounded hidden gap-3 items-center" id="add_young_people">
                         <svg class="fill-white w-4 h-4" xmlns="http://www.w3.org/2000/svg"
                              viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                             <path
