--- a/src/pages/instruments/07_ftch.html
+++ b/src/pages/instruments/07_ftch.html
@@ -22,7 +22,7 @@
                     <span class="t_ftch_list"></span>
                 </h1>
                 <div>
-                    <button class="bg-menuButton text-white px-3 py-1 rounded flex gap-3 items-center" id="add_family_type">
+                    <button class="bg-menuButton text-white px-3 py-1 rounded hidden gap-3 items-center" id="add_family_type">
                         <svg class="fill-white w-4 h-4" xmlns="http://www.w3.org/2000/svg"
                              viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                             <path
